# pybatch

./: README.md  pyproject.toml  setup.py
notebooks/: example.ipynb
pybatch/: __init__.py  cli.py  io.py  parameters.py  parse.py  preferences.py  univa_grid_engine.py  utils.py
scripts/: _array_job_template.py  _template.py
